version/1.1/_sources/api_reference/cvxpy.atoms.other_atoms.rst.txt
Other Atoms
===================
The atoms listed here are neither affine nor elementwise.

.. contents:: :local:

.. _cummax:

cummax
--------

.. autoclass:: cvxpy.atoms.cummax.cummax
    :show-inheritance:

.. _diff-pos:

diff_pos
--------

.. autofunction:: cvxpy.atoms.one_minus.diff_pos

.. _eye-minus-inv:

eye_minus_inv
--------------

.. autoclass:: cvxpy.atoms.eye_minus_inv.eye_minus_inv
    :show-inheritance:

.. _geo-mean:

geo_mean
------------------------------

.. autoclass:: cvxpy.atoms.geo_mean.geo_mean
    :show-inheritance:

.. _gmatmul:

gmatmul
------------------------------

.. autoclass:: cvxpy.atoms.gmatmul.gmatmul
    :show-inheritance:

.. _harmonic-mean:

harmonic_mean
-----------------------------------

.. autofunction:: cvxpy.atoms.harmonic_mean.harmonic_mean

.. _inv-prod:

inv_prod
-----------------------------------

.. autofunction:: cvxpy.atoms.inv_prod.inv_prod

.. _lambda-max:

lambda_max
--------------------------------

.. autoclass:: cvxpy.atoms.lambda_max.lambda_max
    :show-inheritance:

.. _lambda-min:

lambda_min
--------------------------------

.. autofunction:: cvxpy.atoms.lambda_min.lambda_min

.. _lambda-sum-largest:

lambda_sum_largest
-----------------------------------------

.. autofunction:: cvxpy.atoms.lambda_sum_largest.lambda_sum_largest

.. _lambda-sum-smallest:

lambda_sum_smallest
------------------------------------------

.. autofunction:: cvxpy.atoms.lambda_sum_smallest.lambda_sum_smallest

.. _log-det:

log_det
-----------------------------

.. autoclass:: cvxpy.atoms.log_det.log_det
    :show-inheritance:

.. _log-sum-exp:

log_sum_exp
----------------------------------

.. autoclass:: cvxpy.atoms.log_sum_exp.log_sum_exp
    :show-inheritance:

.. _matrix-frac:

matrix_frac
---------------------------------

.. autofunction:: cvxpy.atoms.matrix_frac.matrix_frac

.. _max:

max
------------------------

.. autoclass:: cvxpy.atoms.max.max
    :show-inheritance:

.. _min:

min
------------------------

.. autofunction:: cvxpy.atoms.min.min

.. _mixed-norm:

mixed_norm
--------------------------------

.. autofunction:: cvxpy.atoms.mixed_norm.mixed_norm

.. _norm:

norm
-------------------------

.. autofunction:: cvxpy.atoms.norm.norm

.. _norm1:

norm1
--------------------------

.. autoclass:: cvxpy.atoms.norm1.norm1
    :show-inheritance:

.. _norm2:

norm2
--------------------------

.. autofunction:: cvxpy.atoms.norm.norm2
    :show-inheritance:

.. _norm-inf:

norm_inf
------------------------------

.. autoclass:: cvxpy.atoms.norm_inf
    :show-inheritance:

.. _norm-nuc:

normNuc
------------------------------

.. autoclass:: cvxpy.atoms.norm_nuc.normNuc
    :show-inheritance:

.. _one-minus-pos:

one_minus_pos
------------------------------

.. autoclass:: cvxpy.atoms.one_minus_pos
    :show-inheritance:

.. _pf-eigenvalue:

pf_eigenvalue
------------------------------

.. autoclass:: cvxpy.atoms.pf_eigenvalue.pf_eigenvalue
    :show-inheritance:

.. _pnorm_func:

pnorm
--------------------------

.. autofunction:: cvxpy.atoms.pnorm.pnorm

.. _Pnorm:

Pnorm
--------------------------

.. autoclass:: cvxpy.atoms.pnorm.Pnorm

.. _prod:

prod
--------------------------

.. autofunction:: cvxpy.atoms.prod.prod

.. _quad-form:

quad_form
-------------------------------

.. autofunction:: cvxpy.atoms.quad_form.quad_form

.. _quad-over-lin:

quad_over_lin
------------------------------------

.. autoclass:: cvxpy.atoms.quad_over_lin.quad_over_lin
    :show-inheritance:

.. _resolvent:

resolvent
--------------------------

.. autofunction:: cvxpy.atoms.eye_minus_inv.resolvent

.. _sigma-max:

sigma_max
-------------------------------

.. autoclass:: cvxpy.atoms.sigma_max.sigma_max
    :show-inheritance:

.. _sum-largest:

sum_largest
---------------------------------

.. autoclass:: cvxpy.atoms.sum_largest.sum_largest
    :show-inheritance:

.. _sum-smallest:

sum_smallest
----------------------------------

.. autofunction:: cvxpy.atoms.sum_smallest.sum_smallest

.. _sum-squares:

sum_squares
---------------------------------

.. autofunction:: cvxpy.atoms.sum_squares.sum_squares

.. _tv:

tv
-------------------------------------

.. autofunction:: cvxpy.atoms.total_variation.tv
